--- a/mock-ui/xpanse-ui/package.json
+++ b/mock-ui/xpanse-ui/package.json
@@ -14,11 +14,13 @@
     "antd": "^5.2.2",
     "axios": "^1.3.4",
     "react": "^18.2.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
     "react-router": "^6.8.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "whatwg-fetch": "^3.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
